fix ZK-5733: URIBuilder causes warnings for resources from jar with "!" in url for f51152c236ba4e4105f2570be55ecbfe617546fc